// Vitest Snapshot v1

exports[`Card > should render all the compoents 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e19ah2h63"
  >
    <div
      class="css-13ob5sy-StyledContainer e19ah2h62"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-vz0gkq-StyledIcon e19ah2h60"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCard-Header-root css-vg4jg5-StyledHeader e1u3cqlo0 css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCard-Header-title css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCard-Header-subheader css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCard-Media-root MuiCardMedia-media HvCard-Media-media MuiCardMedia-img css-naac46-StyledMedia eawuy7p0 css-o69gx8-MuiCardMedia-root"
      role="img"
    />
    <div
      class="MuiCardContent-root HvCard-Content-content css-13eu6v-StyledContent es2bop10 css-46bh2p-MuiCardContent-root"
    >
      <p
        class="css-ivbjlp-getStyledComponent e1te0rfk0"
        variant="label"
      >
        mockCardContent
      </p>
    </div>
  </div>
</div>
`;

exports[`Card > should render content 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e19ah2h63"
  >
    <div
      class="css-13ob5sy-StyledContainer e19ah2h62"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-vz0gkq-StyledIcon e19ah2h60"
      />
    </div>
    <div
      class="MuiCardContent-root HvCard-Content-content css-13eu6v-StyledContent es2bop10 css-46bh2p-MuiCardContent-root"
    >
      <p
        class="css-ivbjlp-getStyledComponent e1te0rfk0"
        variant="label"
      >
        mockCardContent
      </p>
    </div>
  </div>
</div>
`;

exports[`Card > should render correctly 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e19ah2h63"
  >
    <div
      class="css-13ob5sy-StyledContainer e19ah2h62"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-vz0gkq-StyledIcon e19ah2h60"
      />
    </div>
  </div>
</div>
`;

exports[`Card > should render header 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e19ah2h63"
  >
    <div
      class="css-13ob5sy-StyledContainer e19ah2h62"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-vz0gkq-StyledIcon e19ah2h60"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCard-Header-root css-vg4jg5-StyledHeader e1u3cqlo0 css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCard-Header-title css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCard-Header-subheader css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render image 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e19ah2h63"
  >
    <div
      class="css-13ob5sy-StyledContainer e19ah2h62"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-vz0gkq-StyledIcon e19ah2h60"
      />
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCard-Media-root MuiCardMedia-media HvCard-Media-media MuiCardMedia-img css-naac46-StyledMedia eawuy7p0 css-o69gx8-MuiCardMedia-root"
      role="img"
    />
  </div>
</div>
`;
